tests/fixtures/valid/loops/break_continue_loop.pine
//@version=6
indicator("Break continue")
i = 0
while i < 10
    i += 1
    if i == 2
        continue
    if i == 5
        break
plot(i)
