tests/fixtures/invalid/semantic/nested_function_definition.pine
//@version=6
indicator("x")
f() =>
    g() => 1
    2
